<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jonas.studyplatform.AboutActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="493dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="65dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/aboutUs"
                android:layout_width="match_parent"
                android:paddingRight="20dp"
                android:layout_height="240dp"
                android:layout_marginTop="30dp"
                android:text="@string/about_us"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.72"
                android:text="@string/enjoy"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/enjoytv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/best"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kasper"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@mipmap/os_billede" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/comeVisitUs"
                android:textAlignment="center"
                android:textSize="20dp" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:cameraZoom="14"
                tools:context="com.example.jonas.studyplatform.MapsActivity" />


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
