<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jonas.studyplatform.MainActivity">


    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />



    <TextView
        android:id="@+id/enjoyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enjoy"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        android:textAlignment="center"
        android:layout_below="@+id/nameTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTextView"
        android:layout_marginTop="25dp"
        android:text=""
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_alignRight="@+id/enjoyTextView"
        android:layout_alignEnd="@+id/enjoyTextView"
        android:layout_alignLeft="@+id/enjoyTextView"
        android:layout_alignStart="@+id/enjoyTextView" />

    <TextView
        android:id="@+id/txtLinkSocial"
        android:layout_height="70dp"
        android:layout_width="200dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/visitUs" />

    <ImageButton
        android:id="@+id/faceBtn"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/txtLinkSocial"
        android:layout_toRightOf="@+id/txtLinkSocial"
        app:srcCompat="@mipmap/iconsfacebook" />

    <ImageButton
        android:id="@+id/twitterBtn"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/faceBtn"
        android:layout_toEndOf="@+id/faceBtn"
        android:layout_toRightOf="@+id/faceBtn"
        app:srcCompat="@mipmap/iconstwitter" />


    <Button
        android:id="@+id/updateButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_info"
        android:layout_above="@+id/txtLinkSocial"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/updateInfoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text=""
        android:layout_above="@+id/updateButton3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/countMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/updateInfoView"
        android:layout_marginBottom="40dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>




